--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
     <div class="row">
@@ -28,6 +28,7 @@
         <h1>House Prediction System</h1>
       </div>
     </div>
+    <form action="/predict_home_price" method="post">
     <div class="row">
       <div class="mb-3 col-sm-4 offset-sm-4">
         <label for="total_sqft" class="form-label" style="font-weight: bold"
@@ -79,9 +80,15 @@
       </div>
     </div>
     <div class="row">
-      <div class="offset-sm-4">
-        <button type="submit">Predict</button>
+      <div class="col-sm-4 offset-sm-4">
+        <button type="submit" class="btn btn-primary">Predict</button>
       </div>
     </div>
+  </form>
+  <div class="row">
+    <div class="offset-sm-4">
+      <h3>Price</h3><p>{{prediction}}</p>
+    </div>
+  </div>
   </body>
 </html>
